# SWM

./: .gitignore  CMakeLists.txt  Makefile  Makefile.fpga  README  README.md  advisor_buf.sh  buildRun.cpp.sh  buildRun.cpp_omp_SkyL.sh  buildRun.cpu.sh  buildRun.cpu_cpp.sh  buildRun.cpu_omp.sh  buildRun.cpu_omp_cpp.sh  buildRun.dpcpp_buf_IrisDual.sh  buildRun.dpcpp_buf_IrisQuad.sh  buildRun.dpcpp_buf_P630.sh  buildRun.dpcpp_buf_SkyL.sh  buildRun.dpcpp_shared_IrisDual.sh  buildRun.dpcpp_shared_IrisQuad.sh  buildRun.dpcpp_shared_P630.sh  buildRun.dpcpp_shared_SkyL.sh  buildRun.dpcpp_usm_shared.sh  buildRun.gpu.sh  buildRun.gpu_cpp.sh  buildRun.sh  buildRunCPU.kokkos.sh  buildRunCPU.omp.sh  buildRunCPU.sh  buildRunGPU.kokkos.sh  buildRunGPU.sh  buildRunProf.sh  buildRunValgrind.sh  cmake_build_and_run.sh  compare_results.py  compare_results_all.py  derecho_build_and_run.sh  job_casper.sh  job_casper_dpcpp.sh  job_swm_cpp.sh  job_swm_cpp_omp_SkyL.sh  (+34 more)
.github/workflows/: c-cpp.yml
Kokkos_Install_Scripts/: README.md  install_kokkos-gcc_omp_serial_skx.sh  install_kokkos-gcc_serial_skx.sh  install_kokkos-nvcc_cuda_omp_serial_volta70_skx.sh  install_kokkos-nvcc_cuda_uvm_omp_serial_volta70_skx.sh
Kokkos_Scripts/: README.md  buildRun.cpu_kokkos.sh  buildRun.cpu_omp_kokkos.sh  buildRun.gpu_kokkos.sh  buildRunCPU.kokkos.sh  buildRunCPU.omp.kokkos.sh  buildRunGPU.kokkos.sh  install_kokkos-gcc_omp_serial_skx.sh  install_kokkos-gcc_serial_skx.sh  install_kokkos-nvcc_cuda_omp_serial_volta70_skx.sh  install_kokkos-nvcc_cuda_uvm_omp_serial_volta70_skx.sh  setup_kokkos_profiler.sh
NCAR_slurm/: buildRunGPU.sh
gcc_omp_serial_skx/: CMakeCache.txt  Makefile  cmake_install.cmake  swm_kokkos
gcc_serial_skx/: CMakeCache.txt  Makefile  cmake_install.cmake  swm_kokkos
nvcc_cuda_omp_serial_volta70_skx/: CMakeCache.txt  Makefile  cmake_install.cmake
ref/: results_ref.64x64.IT4000.txt
results/: cpp_ref.txt  diff_gpu_ref  dpcpp_cpu1.txt  dpcpp_cpu_buffer.txt  dpcpp_cpu_local_1.txt  dpcpp_cpu_usm_1.txt  dpcpp_gpu1.txt  dpcpp_gpu_buffer.txt  dpcpp_gpu_usm_1.txt
results/cpu/: results_ref.128.txt  results_ref.1536.txt  (+6 more)
results_gpu_kokkos/: results.gpu.kokkos.1024.txt  results.gpu.kokkos.128.txt  results.gpu.kokkos.1536.txt  results.gpu.kokkos.192.txt  results.gpu.kokkos.2048.txt  results.gpu.kokkos.256.txt  results.gpu.kokkos.3072.txt  results.gpu.kokkos.384.txt  results.gpu.kokkos.48.txt  results.gpu.kokkos.512.txt  results.gpu.kokkos.64.txt  results.gpu.kokkos.768.txt  results.gpu.kokkos.96.txt
results_refs/: results_ref.1024.txt  results_ref.192.txt  results_ref.256.txt  results_ref.3072.txt  results_ref.512.txt
saved_results/: results.cpu.update_deep_copy.txt
swm_AMReX/: GNUmakefile  Make.package  README.md  common_functions.sh  inputs  main.cpp  plot_with_yt.py  run_local.sh  swm_mini_app_kernels.h  swm_mini_app_utils.cpp  swm_mini_app_utils.h
swm_AMReX_Fkernels/: Make.package  swm_mini_app_utils.cpp
swm_AMReX_Fsubroutine/: Make.package  inputs  main.cpp  myfunc_F.H  swm_fortran_kernels.F90  swm_mini_app_utils.cpp
swm_amrex/: CMakeLists.txt  swm_mini_app_utils.cpp  swm_mini_app_utils.h
swm_amrex/common/: swm_mini_app_utils.h
swm_amrex/doc/: figure_labels.tex  memory_calculator.py
swm_amrex/plotting_utils/: GNUmakefile  Make.package
swm_amrex/swm_AMReX/: CMakeLists.txt  inputs  main.cpp  run_local.sh  swm_mini_app_kernels.h  swm_mini_app_utils_amrex.cpp
swm_amrex/swm_AMReX/doc/: figure_labels.tex  plot_runtime_speedup_efficiency.py
swm_amrex/swm_AMReX/plotting_utils/: convert_to_hdf5_and_plot.sh  plotfile_2_hdf5.cpp
swm_amrex/swm_AMReX/scaling/: compare_total_runtimes.py  create_csv_from_amrex_tiny_profiler_output.py  plot_cpu_and_gpu_strong_scaling.py  plot_cpu_and_gpu_weak_scaling.py  run_strong_scaling.sh
swm_amrex/swm_AMReX_Fkernels/: CMakeLists.txt  GNUmakefile  main.cpp  swm_fortran_amrex_kernels.F90  swm_mini_app_utils_fkernels.cpp
swm_amrex/swm_AMReX_Fkernels/doc/: figure_labels.tex
swm_amrex/swm_AMReX_Fsubroutine/: .notes.swp  CMakeLists.txt  funcF.H  swm_mini_app_utils_fsubroutine.cpp
swm_amrex/swm_AMReX_Fsubroutine/OpenACC/: CMakeLists.txt  GNUmakefile  Make.package  derecho_make_build_swm_amrex_fsubroutine_acc.sh  swm_fortran_kernelsACC.F90
swm_amrex/swm_AMReX_Fsubroutine/OpenMP/: CMakeLists.txt  GNUmakefile  Make.package  derecho_make_build_swm_amrex_fsubroutine_omp.sh
swm_amrex/swm_AMReX_Fsubroutine/plotting_utils/: GNUmakefile  convert_to_hdf5_and_plot.sh
swm_c/: CMakeLists.txt  Makefile  README  shallow_swap.acc.c  shallow_swap.c
swm_c/c/: CMakeLists.txt
swm_c/c_OpenACC/: CMakeLists.txt
swm_fortran/: CMakeLists.txt  Makefile  params.F90  swm_fortran.F90  swm_fortran_amrex_driver.F90  swm_fortran_amrex_kernels.F90  swm_fortran_driver.F90  swm_fortran_kernels.F90
swm_fortran/fortran/: CMakeLists.txt  params.F90  swm_fortran.F90
swm_fortran/fortran_AMReX_proxy/: CMakeLists.txt  swm_fortran_amrex_driver.F90
swm_fortran/fortran_OpenACC/: CMakeLists.txt  swm_fortran_driver.F90
swm_julia/: gpu_swm_julia.jl  main.jl  swm_julia.jl
swm_kokkos/: CMakeLists.txt  comparison_results.py  comparison_results.sh  shallow_mdrangepolicy.cpp  shallow_rangepolicy.cpp  shallow_rangepolicy_flat.cpp  shallow_swap.cpp  shallow_teampolicy.cpp
swm_kokkos/kokkos_fortran_openacc/: shallow_fortran_acc.F90  shallow_mdrangepolicy.cpp
swm_kokkos/utils/: comparison_results.py  comparison_results.sh  plot.py
swm_kokkos/utils/data/O2/: kokkos_mdrangepolicy.csv  kokkos_rangepolicy.csv  kokkos_teampolicy.csv
swm_kokkos/various_policy_impls/: shallow_mdrangepolicy.cpp  shallow_rangepolicy.cpp  shallow_teampolicy.cpp
swm_python/: config.py  initial_conditions.py  js_gt4py_cartesian.py  lap_cartesian_vs_next.py  swm.ipynb  swm.py  swm_cartesian.py  swm_next.py  swm_numpy.ipynb  swm_numpy.py  swm_validated.py  utils.py
unittests/: t001.cpp  t002.cpp  t003.cpp  t004.cpp  t005.cpp  t006.cpp  t007.cpp  t007.sh  t008.cpp  t008.sh  t009.cpp  t009.sh  t010.cpp  t011.cpp  t012.cpp  t012.sh  t013.cpp  t014.cpp  t015.cpp  t016.cpp  t016.sh  t017.cpp  t018.cpp
(+179 files in other folders)
